Fix navbar on mobile

--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
-#navbar {
-    visibility: hidden;
+@media screen and (min-width: 1024px) {
+    #navbar {
+        visibility: hidden;
+    }
 }
